# blocks

./: .gitignore  CMakeLists.txt  board.cpp  board.h  brick.cpp  brick.h  bricks.cpp  bricks.h  computation.cpp  computation.h  evaluators.h  main.cpp  types.cpp  types.h  xy.h
tests/: type_tests.cpp
